shift+enter bug resolved

--- a/weather-feed/resources/css/queries.css
+++ b/weather-feed/resources/css/queries.css
@@ -271,6 +271,9 @@
 	.comment-temp {
 		float: right;
 	}
+	button {
+	top:0px;
+}
 }
 
 @media only screen and (max-width:425px) {
